# AtomChecker

./: Cargo.toml  README.md  need.txt
src/: checker.rs  cli.rs  dictionary.rs  editor.rs  gui.rs  language.rs  lib.rs  main.rs  sidebar.rs  theme.rs  util.rs
src/dictionary/: dictionary(fra).txt  dictionary_afr_.csv  dictionary_eng_.csv  dictionary_fra_.csv
